[gd_scene load_steps=11 format=2]

[ext_resource path="res://src/sounds/FireCrackle.mp3" type="AudioStream" id=1]
[ext_resource path="res://src/sounds/Wind.mp3" type="AudioStream" id=2]
[ext_resource path="res://src/music/BossDrum.mp3" type="AudioStream" id=3]
[ext_resource path="res://src/mechanics/RNG.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/levels/Game.gd" type="Script" id=6]
[ext_resource path="res://src/music/BossGuitar.mp3" type="AudioStream" id=7]
[ext_resource path="res://src/levels/Music.gd" type="Script" id=11]
[ext_resource path="res://src/music/BaseDrum.mp3" type="AudioStream" id=19]
[ext_resource path="res://src/music/BaseBell.mp3" type="AudioStream" id=20]
[ext_resource path="res://src/music/BaseChoir.mp3" type="AudioStream" id=21]

[node name="Game" type="Node2D"]
script = ExtResource( 6 )

[node name="RNG" parent="." instance=ExtResource( 5 )]

[node name="Music" type="Node" parent="."]
script = ExtResource( 11 )

[node name="Bell" type="AudioStreamPlayer" parent="Music"]
stream = ExtResource( 20 )
volume_db = -80.0
autoplay = true

[node name="Choir" type="AudioStreamPlayer" parent="Music"]
stream = ExtResource( 21 )
volume_db = -80.0
autoplay = true

[node name="Drum" type="AudioStreamPlayer" parent="Music"]
stream = ExtResource( 19 )
volume_db = -80.0
autoplay = true

[node name="BossDrum" type="AudioStreamPlayer" parent="Music"]
stream = ExtResource( 3 )
volume_db = -80.0
autoplay = true

[node name="BossGuitar" type="AudioStreamPlayer" parent="Music"]
stream = ExtResource( 7 )
volume_db = -80.0
autoplay = true

[node name="FireCrackle" type="AudioStreamPlayer" parent="Music"]
stream = ExtResource( 1 )
volume_db = -80.0
autoplay = true

[node name="Wind" type="AudioStreamPlayer" parent="Music"]
stream = ExtResource( 2 )
volume_db = -80.0
autoplay = true
